# ChangeLog for media-libs/jpeg
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/jpeg/ChangeLog,v 1.16 2004/02/17 10:14:07 kumba Exp $

  17 Feb 2004; Joshua Kinard <kumba@gentoo.org> jpeg-6b-r3.ebuild:
  Added ~mips to keywords, removed arm keyword, fixed date.

  16 Nov 2003; Martin Holzer <mholzer@gentoo.org> jpeg-6b-r3.ebuild:
  adding more docs. Closes #33439

*jpeg-6b-r3 (15 Nov 2002)

  11 May 2003; Guy Martin <gmsoft@gentoo.org> jpeg-6b-r3.ebuild :
  Added use hppa && gnuconfig_update to support hppa2.0-unknown-linux-gnu targets.

  06 Apr 2003; Zach Welch <zwelch@gentoo.org> jpeg-6b-r3.ebuild:
  add arm keyword

  02 Mar 2003; Martin Holzer <mholzer@gentoo.org> jpeg-6b-r3.ebuild :
  Changing back to replace-flags.

  12 Feb 2003; Guy Martin <gmsoft@gentoo.org> jpeg-6b-r3.ebuild :
  Added hppa to keywords and replaced $chost by $CHOST.

  31 Jan 2003; Seemant Kulleen <seemant@gentoo.org> jpeg-6b-r3.ebuild :

  using bash isntead of replace-flags for k6 stuff Closes bug #14851 by
  Andy gorham <uncleduck@sympatico.ca>

  16 Jan 2003; Seemant Kulleen <seemant@gentoo.org> jpeg-6b-r3.ebuild :

  replace -march=k6-3 by -march=i586 as well. This time closes bug #13955 by
  aholler@gentoo.de (Alexander Holler)

  12 Jan 2003; Seemant Kulleen <seemant@gentoo.org> jpeg-6b-r3.ebuild :

  Replace -march=k6 and -march=k6-2 flags with -march=i586, as per bug
  #13684 by: raymond.barbiero@uconn.edu (Raymond D Barbiero)

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
  18 Nov 2002; Will Woods <wwoods@gentoo.org> jpeg-6b-r3.ebuild, ChangeLog:
  Minor fix to chouser's minor fix, updating gnuconfig files so they 
  recognize alphaev67 as a valid CHOST.

  15 Nov 2002; Chris Houser <chouser@gentoo.org> files/digest-jpeg-6b-r3,
  jpeg-6b-r3.ebuild, ChangeLog: Minor bug fix to build process.  The bug was