@@ -1,6 +1,6 @@
-MD5 e35d6dbb855cda326844be0c0b3e4fd4 ChangeLog 2509
+MD5 f8170c545d53ae38c097a7079f833afa ChangeLog 2590
 MD5 5ba9351b32c72c5bc635a0642040298a jpeg-6b-r2.ebuild 784
-MD5 94abea56f053ee77f6dca53f7b525bdf jpeg-6b-r3.ebuild 1261
+MD5 e9c06d286f20d6678da927918180e989 jpeg-6b-r3.ebuild 1298
 MD5 3637cbaea842b04f1aa4693a1f68e286 metadata.xml 224
 MD5 232dd13c6edffa89c6ccd5f911bbac64 files/digest-jpeg-6b-r2 63
 MD5 232dd13c6edffa89c6ccd5f911bbac64 files/digest-jpeg-6b-r3 63
