@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/jpeg/Attic/jpeg-6b-r3.ebuild,v 1.18 2004/02/17 10:14:07 kumba Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/jpeg/Attic/jpeg-6b-r3.ebuild,v 1.19 2004/03/03 04:47:01 tgall Exp $
 
 inherit gnuconfig flag-o-matic
 
@@ -11,7 +11,7 @@ HOMEPAGE="http://www.ijg.org/"
 
 SLOT="0"
 LICENSE="as-is"
-KEYWORDS="x86 ppc sparc alpha hppa amd64 ia64 ~mips"
+KEYWORDS="x86 ppc sparc alpha hppa amd64 ia64 ~mips ppc64"
 
 DEPEND="virtual/glibc"
 
@@ -30,6 +30,7 @@ src_unpack() {
 	use hppa && gnuconfig_update
 	use amd64 && gnuconfig_update
 	use ia64 && gnuconfig_update
+	use ppc64 && gnuconfig_update
 }
 
 src_compile() {
